修改书籍页面链接为{{.site.url}}

--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -45,7 +45,7 @@ title: 云谷计算
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/linux-insides-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/linux-insides-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -65,7 +65,7 @@ title: 云谷计算
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -83,7 +83,7 @@ title: 云谷计算
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/rust-book/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/rust-book/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -101,7 +101,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span-->
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gopl-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -119,7 +119,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -137,7 +137,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-vue"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -155,7 +155,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <a href="httpss://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/blockchain-tutorial/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain-tutorial/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -172,7 +172,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-html"></span>
                                     <span class="fa fa-css3"></span>
                                     <span><b>JS</b></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/blockchain_guide/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain_guide/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -183,14 +183,14 @@ title: 云谷计算
                             <time>2018-1</time>
                             <img src="images/work-hslider.jpg">
                             <ul>
-                                <li>
+                                <li>{{.site.url}}
                                     基因测序已是时下热门，目前除了华大基因之外，其他分布于全中国的大型测序平台（HiSeq X 10）还有约10个，每个每年大概能完成1.8万人的高深度全基因组测序，加起来就是18万人，如果加上华大，可能需要翻倍！而且随着新技术的快速发展和成本的下降，正变得越来越普遍！再加上国家十三五规划提出了构建大规模中国人群队列基因组数据库的要求，全基因组测序技术正在逐渐替代其它测序手段，这也是我打算写这一个系列的原因
                                 </li>
                                 <li class="skill">
                                     <!--span class="fa fa-css3"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-jquery"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/gene_sequencing_book/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gene_sequencing_book/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
