--- a/gitbooks.html
+++ b/gitbooks.html
@@ -39,7 +39,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/linux-insides-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/linux-insides-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -59,7 +59,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -77,7 +77,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/rust-book/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/rust-book/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -95,7 +95,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gopl-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -113,7 +113,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -131,7 +131,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-vue"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -149,7 +149,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <a href="httpss://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/blockchain-tutorial/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain-tutorial/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -166,7 +166,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-html"></span>
                                     <span class="fa fa-css3"></span>
                                     <span><b>JS</b></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/blockchain_guide/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain_guide/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -184,7 +184,7 @@ CTYPE html>
                                     <!--span class="fa fa-css3"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-jquery"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/gene_sequencing_book/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gene_sequencing_book/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -199,7 +199,7 @@ CTYPE html>
                                 <li class="skill">
                                     <!--span><b>Ae</b></span>
                                     <span class="cbp_tmicon-video"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/go-in-action-note/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/go-in-action-note/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -216,7 +216,7 @@ CTYPE html>
                                 <li class="skill">
                                     <!--span><b>Ae</b></span>
                                     <span class="cbp_tmicon-video"></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/interrupt-virtualization/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/interrupt-virtualization/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -232,7 +232,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-font"></span>
                                     <span><b>Ps</b></span>
                                     <span><b>Ae</b></span-->
-                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/linux-block-driver/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/linux-block-driver/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
