--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -33,6 +33,25 @@ title: 云谷计算
                 <ul class="cbp_tmtimeline" style="margin-top:0.1%;">
                     <li>
                         <div class="cbp_tmlabel">
+                            <h2 id="boxoffice">Think in Java</h2>
+                            <time>2018-4</time>
+                            <img src="images/java.jpg">
+                            <ul>
+                                <li>
+                                   Java编程思想<br />
+                                   云谷计算整理
+                                </li>
+                                <li class="skill">
+                                    <span class="cbp_tmicon-phone"></span>
+                                    <!--span><b>JS</b></span>
+                                    <span class="i-react"></span-->
+                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/think-java/">Read it</a></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Linux 内核揭密 中文版</h2>
                             <time>2018-4</time>
                             <img src="images/timg.jpg">
