--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -35,7 +35,7 @@ title: 云谷计算
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Think in Java</h2>
                             <time>2018-4</time>
-                            <img src="images/java.jpg">
+                            <img src="images/tj.jpg">
                             <ul>
                                 <li>
                                    Java编程思想<br />
@@ -43,8 +43,6 @@ title: 云谷计算
                                 </li>
                                 <li class="skill">
                                     <span class="cbp_tmicon-phone"></span>
-                                    <!--span><b>JS</b></span>
-                                    <span class="i-react"></span-->
                                     <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/think-java/">Read it</a></span>
                                 </li>
                             </ul>
