修改了一点小BUG

--- a/gitbooks.html
+++ b/gitbooks.html
@@ -1,4 +1,4 @@
-CTYPE html>
+<!DOCTYPE html>
 <html class="no-js">
     <head>
         <meta charset="UTF-8" />
@@ -28,8 +28,8 @@ CTYPE html>
                     <li>
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Think in Java</h2>
-                            <time>2018-4</time>
-                            <img src="images/java.jpg">
+                            <time>2018-6</time>
+                            <img src="images/tj.jpg">
                             <ul>
                                 <li>
                                    Java编程思想<br />
