--- a/gitbooks.html
+++ b/gitbooks.html
@@ -29,7 +29,7 @@
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Think in Java</h2>
                             <time>2018-6</time>
-                            <img src="images/tj.jpg">
+                            <img src="images/thinkjava.jpg">
                             <ul>
                                 <li>
                                    Java编程思想<br />
