--- a/gitbooks.html
+++ b/gitbooks.html
@@ -39,7 +39,7 @@
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/think-java/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/think-java/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -58,7 +58,7 @@
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/linux-insides-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/linux-insides-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -78,7 +78,7 @@
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -96,7 +96,7 @@
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/rust-book/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/rust-book/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -114,7 +114,7 @@
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gopl-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/gopl-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -132,7 +132,7 @@
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -150,7 +150,7 @@
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-vue"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -168,7 +168,7 @@
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <a href="httpss://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain-tutorial/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/blockchain-tutorial/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -185,7 +185,7 @@
                                     <!--span class="cbp_tmicon-html"></span>
                                     <span class="fa fa-css3"></span>
                                     <span><b>JS</b></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain_guide/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/blockchain_guide/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -203,7 +203,7 @@
                                     <!--span class="fa fa-css3"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-jquery"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gene_sequencing_book/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/gene_sequencing_book/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -218,7 +218,7 @@
                                 <li class="skill">
                                     <!--span><b>Ae</b></span>
                                     <span class="cbp_tmicon-video"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/go-in-action-note/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/go-in-action-note/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -235,7 +235,7 @@
                                 <li class="skill">
                                     <!--span><b>Ae</b></span>
                                     <span class="cbp_tmicon-video"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/interrupt-virtualization/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/interrupt-virtualization/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -251,7 +251,7 @@
                                     <!--span class="cbp_tmicon-font"></span>
                                     <span><b>Ps</b></span>
                                     <span><b>Ae</b></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/linux-block-driver/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/linux-block-driver/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
