--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -43,7 +43,7 @@ title: 云谷计算
                                 </li>
                                 <li class="skill">
                                     <span class="cbp_tmicon-phone"></span>
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/think-java/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/think-java/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -62,7 +62,7 @@ title: 云谷计算
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/linux-insides-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/linux-insides-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -82,7 +82,7 @@ title: 云谷计算
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -100,7 +100,7 @@ title: 云谷计算
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/rust-book/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/rust-book/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -118,7 +118,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span-->
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gopl-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/gopl-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -136,7 +136,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -154,7 +154,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-vue"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -172,7 +172,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <a href="httpss://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain-tutorial/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/blockchain-tutorial/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -189,7 +189,7 @@ title: 云谷计算
                                     <!--span class="cbp_tmicon-html"></span>
                                     <span class="fa fa-css3"></span>
                                     <span><b>JS</b></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/blockchain_guide/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/blockchain_guide/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -207,7 +207,7 @@ title: 云谷计算
                                     <!--span class="fa fa-css3"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-jquery"></span-->
-                                    <span class="link"><a target="_blank" href="{{.site.url}}/static/gitbooks/gene_sequencing_book/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="{{site.url}}/static/gitbooks/gene_sequencing_book/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
